# bevy-webgl1

./: .gitignore  Cargo.toml  Trunk.toml
src/: bin.rs  lib.rs  test_bin.rs  util.rs
src/shaders/: mesh.frag  mesh.vert
web/: index.html
