[package]
name = "bevy_webgl1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.6.1"
wasm-bindgen = "0.2.79"
js-sys = "0.3.56"
console_error_panic_hook = "0.1.7"
gloo-console = "0.2.1"
bevy_obj = "0.6.0"
smooth-bevy-cameras = "0.2.0"
itertools = "0.10.3"

[dependencies.web-sys]
version = "0.3.56"
features = [
    'Document',
    'Element',
    'HtmlCanvasElement',
    'WebGlBuffer',
    'WebGlUniformLocation',
    'WebGlRenderingContext',
    'WebGlVertexArrayObject',
    'WebGlProgram',
    'WebGlShader',
    'OesVertexArrayObject',
    'WebGlVertexArrayObject',
    'Window',
]

[lib]
name = "bevy_webgl1"
path = "src/lib.rs"

[[bin]]
name = "render"
path = "src/bin.rs"

[[bin]]
name = "test-bin"
path = "src/test_bin.rs"
